[build-system]
build-backend = "maturin"
requires = ["maturin>=1.5.0,<2.0.0"]

[project]
authors = [{name = "Eventual Inc", email = "daft@eventualcomputing.com"}]
dependencies = [
  "pyarrow >= 8.0.0",
  "fsspec",
  "tqdm",
  "typing-extensions >= 4.0.0; python_version < '3.11'",
  "packaging"
]
description = "Distributed Dataframes for Multimodal Data"
dynamic = ["version"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Sammy Sidhu", email = "sammy@eventualcomputing.com"},
  {name = "Jay Chia", email = "jay@eventualcomputing.com"}
]
name = "daft"
readme = "README.rst"
requires-python = ">=3.10"

[project.scripts]
daft = "daft.cli:main"

[project.urls]
homepage = "https://www.daft.ai"
repository = "https://github.com/Eventual-Inc/Daft"

[project.optional-dependencies]
all = ["daft[aws, azure, clickhouse, deltalake, gcp, google, hudi, huggingface, iceberg, lance, numpy, openai, pandas, postgres, ray, sentence-transformers, spark, sql, transformers, turbopuffer, unity, video]"]
aws = ["boto3"]
azure = []
clickhouse = ["clickhouse_connect"]
deltalake = ["deltalake <= 1.2.1"]
gcp = []
google = ["google-genai"]
hudi = ["pyarrow >= 8.0.0"]
huggingface = ["huggingface-hub", "datasets"]
# TODO: pyiceberg 0.9.1 has a bug https://github.com/apache/iceberg-python/issues/1979. It was not
# triggered because we specify pyiceberg == 0.10.0 in requrements-dev.txt which hide this problem.
# See https://github.com/Eventual-Inc/Daft/issues/4868.
iceberg = ["pyiceberg >= 0.7.0, < 0.9.1"]
lance = ["pylance"]
numpy = ["numpy"]
openai = ["openai"]
pandas = ["pandas"]
postgres = ["psycopg", "pgvector"]
ray = [
  # Inherit existing Ray version. Get the "default" extra for the Ray dashboard.
  'ray[data, client]>=2.0.0; platform_system != "Windows"',
  'ray[data, client]>=2.10.0; platform_system == "Windows"'  # ray 2.10 has the pyarrow upper pin removed
]
transformers = ["transformers", "sentence-transformers", "torch", "torchvision"]
spark = ["googleapis-common-protos >= 1.56.4", "grpcio >= 1.48", "grpcio-status >= 1.48", "numpy >= 1.15", "pandas >= 1.0.5", "py4j >= 0.10.9.7", "pyspark == 4.0.1"]
# connectorx 0.4.4 is needed for pgvector support.
sql = ["connectorx>=0.4.4", "sqlalchemy", "sqlglot"]
turbopuffer = ["turbopuffer"]
unity = ["httpx <= 0.27.2", "unitycatalog"]
video = ["av >= 15.0.0"]
audio = ["soundfile >= 0.13.0", "librosa >= 0.11.0"]
viz = []

[dependency-groups]
dev = [
  "ipdb",
  "maturin",
  "pre-commit",
  "docker",
  # Pinned aiohttp due to Ray connection issue in aiohttp==3.12.6
  "aiohttp==3.13.2",
  # Pinned httpx due to unitycatalog-python issue: https://github.com/unitycatalog/unitycatalog-python/issues/9
  "httpx==0.28.1",
  # Tracing
  "orjson==3.11.4",
  "py-spy>=0.3.14",
  "viztracer==0.17.1",
  # Testing frameworks
  "hypothesis==6.79.2",
  "pytest==9.0.1",
  "pytest-benchmark==5.2.3",
  "pytest-cov==7.0.0",
  "pytest-lazy-fixture==0.6.3",
  "memray==1.19.1; platform_system != \"Windows\"",
  "pytest-codspeed==4.2.0",
  # Testing dependencies
  "lxml==6.0.2",
  "dask[dataframe]>=2025.10.0",
  "numpy==2.2.6; python_version >= '3.13'",
  "numpy==1.26.2; python_version < '3.13'",
  "pandas==2.2.3; python_version >= '3.13'",
  "pandas==2.1.3; python_version < '3.13'",
  "pandas-stubs==2.3.3.251201",
  "xxhash>=3.0.0",
  "Pillow==12.0.0",
  "reportlab",
  "opencv-python==4.12.0.88",
  "tiktoken==0.12.0",
  "duckdb==1.4.2",
  "datasets==4.4.1",
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "tensorflow>=2.18.1; python_version < '3.13'",
  "tf-keras>=2.18.0; python_version < '3.13'",
  "jax>=0.4.30",
  "jaxtyping>=0.2.36",
  # Pyarrow
  "pyarrow==22.0.0",
  "pyarrow-stubs==20.0.0.20251107",
  # Ray
  "ray[data, client]==2.52.1; python_version >= '3.13' or platform_system != \"Linux\" or platform_machine != \"x86_64\"",
  "ray[data, client]==2.34.0; python_version < '3.13' and platform_system == \"Linux\" and platform_machine == \"x86_64\"",
  # Lance
  "pylance>=0.37.0",
  # Iceberg
  "pyiceberg==0.7.0",
  "pydantic==2.11.7",
  "tenacity==9.1.2",
  # Delta Lake
  "deltalake==1.2.1; platform_system == \"Windows\"",
  "deltalake==1.2.1; platform_system != \"Windows\"",
  # Databricks
  "databricks-sdk==0.73.0",
  "unitycatalog==0.1.1",
  # SQL
  "sqlalchemy==2.0.44",
  "connectorx>=0.4.4; platform_system == \"Linux\" and platform_machine == \"aarch64\"",
  "connectorx>=0.4.4; platform_system != \"Linux\" or platform_machine != \"aarch64\"",
  "trino[sqlalchemy]==0.336.0",
  "PyMySQL==1.1.2",
  "psycopg2-binary==2.9.11",
  "sqlglot==28.0.0",
  "pyodbc>=5.3.0",
  # AWS
  "s3fs==2025.10.0",
  "boto3==1.42.0",
  "boto3-stubs[essential,glue,s3,s3tables]==1.41.5",
  "moto[glue,s3,server]==5.1.18",
  # Azure
  "adlfs==2025.8.0",
  "azure-storage-blob==12.27.1",
  # GCS
  "gcsfs==2025.10.0",
  # Hugging Face
  "huggingface-hub==1.1.7",
  # Daft connect testing
  "pyspark==3.5.5",
  "grpcio==1.76.0",
  "grpcio-status==1.76.0",
  # AI
  "vllm>=0.5.0; platform_system == \"Linux\" and platform_machine == \"x86_64\"",
  "vllm==0.11.2; platform_system != \"Linux\" or platform_machine != \"x86_64\"",
  "openai==2.8.1",
  "google-genai",
  # AV
  "av==16.0.1",
  "soundfile>=0.13.0",
  "librosa>=0.11.0",
  # Clickhouse
  "clickhouse-connect",
  # mcap
  "mcap==1.3.0",
  "mcap-ros2-support==0.5.6",
  "mcap-protobuf-support==0.5.3",
  # BigTable
  "google-cloud-bigtable>=2.33.0"
]
docs = [
  "markdown-exec",
  "mkdocs-jupyter",
  "mkdocs-material",
  "mkdocs-macros-plugin",
  "mkdocs-simple-hooks",
  "pymdown-extensions",
  "mkdocs-material[imaging]",
  "mkdocstrings-python",
  "mkdocs-minify-plugin",
  "mkdocs-redirects",
  "mkdocs-gen-files",
  "griffe",
  "mkdocs-literate-nav",
  "Jinja2"
]
lint = [
  "ruff",
  "black",
  "isort",
  "mypy"
]

[tool]

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words-list = "crate,arithmetics,ser,acter,MOR"
# Feel free to un-skip examples, and experimental, you will just need to
# work through many typos (--write-changes and --interactive will help)
skip = "tests/series/*,target,.git,.venv,venv,data,*.csv,*.csv.*,*.html,*.json,*.jsonl,*.pdf,*.txt,*.ipynb,*.tiktoken,*.sql,tests/table/utf8/*,tests/table/binary/*,*.warc,tests/ai/*"

[tool.maturin]
# "python" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["python"]

[tool.mypy]
exclude = ['daft/pickle/*.py$']
files = ["daft/**/*.py", "daft/**/*.pyx", "tests/**/*.py"]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pyarrow.*",
  "fsspec.*",
  "icebridge.*",
  "cloudpickle.*",
  "docker.*",
  "uvicorn.*",
  "numba.*",
  "viztracer.*"
]

[[tool.mypy.overrides]]
enable_error_code = ["attr-defined"]
module = 'daft.*'
warn_return_any = false

[tool.pyright]
typeCheckingMode = "off"
venv = ".venv"
venvPath = "."

[[tool.pyright.executionEnvironments]]
root = ".github/ci-scripts"

[[tool.pyright.executionEnvironments]]
root = "tools"

[[tool.pyright.executionEnvironments]]
root = "daft_dashboard"

[tool.pytest.ini_options]
addopts = "-m 'not (integration or benchmark or hypothesis)'"
minversion = "6.0"
testpaths = [
  "tests"
]

[tool.uv.sources.daft_dashboard]
workspace = true

[tool.uv.workspace]
members = ["daft_dashboard"]
